# lp1-project

./: CMakeLists.txt  README.md
data/: crimedb.csv  dnadb.csv
include/: ArmazenaDNA.h  CenaCrime.h  Commands.h  Suspeito.h  crimedb_query.h  dna_query.h  load_database.h
src/: Makefile  bin  crimedb_query.cpp  crimedb_query.h  dna_query.cpp  dna_query.h  load_csv.cpp  load_csv.h  load_database.cpp  main.cpp
