cmake_minimum_required(VERSION 3.5)
project(database VERSION 0.1 LANGUAGES CXX )


### Execut치vel
# Diret칩rio contendo os .hpp
include_directories( include )

# Cria um execut치vel com nome "database", adiciona neste execut치vel os arquivos src/ArmazenaDNA.cpp src/CenaCrime.cpp src/Commands.cpp
add_executable( concordo
                src/ArmazenaDNA.cpp
                src/CenaCrime.cpp 
		src/Commands.cpp)

# The end